--- a/packages/mobile-patients/android/build.gradle
+++ b/packages/mobile-patients/android/build.gradle
@@ -44,15 +44,15 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-        // maven {
-        //     url "http://tokbox.bintray.com/maven"
-        // }
+        maven {
+            url "http://tokbox.bintray.com/maven"
+        }
         maven {
             url 'https://maven.google.com/' // Make Sure This block is added over here only
             name 'Google'
         }
 
-        // maven { url 'https://kotlin.bintray.com/kotlinx/' }
+        maven { url 'https://kotlin.bintray.com/kotlinx/' }
         maven { url "https://maven.juspay.in/jp-build-packages/hyper-sdk/"}
     }
 }
