--- a/packages/mobile-patients/ios/ApolloPatient/ApolloPatient.entitlements
+++ b/packages/mobile-patients/ios/ApolloPatient/ApolloPatient.entitlements
@@ -7,6 +7,7 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>applinks:apl247.onelink.me</string>
+		<string>applinks:apollo247.onelink.me</string>
 		<string>applinks:www.apollopharmacy.in</string>
 		<string>applinks:www.apollo247.com</string>
 	</array>
